<?php

namespace Jokenpo;

class Papel extends Play
{
    protected array $gainFrom = [Pedra::class];
}