<?php

namespace Jokenpo;

class Pedra extends Play
{
    protected array $gainFrom = [Tesoura::class];
}