<?php


namespace Jokenpo;


class Tesoura extends Play
{
    protected array $gainFrom = [Papel::class];
}